--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "prepare": "npm run typecheck && npm run build && npm run test && npm run lint",
     "test": "vitest run",
     "typecheck": "tsc --noEmit",
-    "mcp-cli": "mcp-inspector --cli npm run dev"
+    "mcp-cli": "mcp-inspector --cli npm run dev",
+    "format": "prettier --write 'src/**/*.ts' '*.md'"
   },
   "dependencies": {
     "@modelcontextprotocol/sdk": "^1.11.2",
@@ -40,6 +41,9 @@
     "@types/node": "^20.17.50",
     "@types/ws": "^8.18.1",
     "eslint": "^8.57.1",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.1.3",
+    "prettier": "^3.2.5",
     "rimraf": "^5.0.5",
     "typescript": "^5.8.3",
     "typescript-eslint": "^8.32.1",
